# peanut

./: Cargo.toml  Rocket.toml  index.html  new-page.html  notes.db
src/: main.rs
temp/: card.html.tera  index.html.tera  write-card.html.tera
templates/: card.html.tera  home.html.tera  index.html.tera  write-card.html.tera
